--- a/style.css
+++ b/style.css
@@ -1,163 +1,111 @@
 /* 
-Theme Name: DPE Baseline
-Theme URI: 
-Description: A responsive baseline theme based on the <a href="http://foundation.zurb.com/">Foundation</a> responsive framework.
+Theme Name: Kasia Organic Salon
+Theme URI: http://www.kasiaorganicsalon.com
+Description: Custom theme for Kasia Organic Salon.
 Author: David Paul Ellenwood
 Author URI: http://dpedesign.com
-Version: 0.1
-License: MIT License
-License URI: http://www.opensource.org/licenses/mit-license.php
+Version: 1.0
 */
 
-@import url("css/foundation.min.css");
+/* 
+	Eric Meyer's CSS Reset
+	http://meyerweb.com/eric/tools/css/reset/ 
+	v2.0 | 20110126
+	License: none (public domain)
+*/
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}
+html{font-size:62.5%}
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
+body{line-height:1}
+ol,ul{list-style:none}
+blockquote,q{quotes:none}
+blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}
+table{border-collapse:collapse;border-spacing:0}
 
 
-a {color:#2a85e8; text-decoration:none; line-height:inherit;}
-a:hover {color:#11639d;}
-a:focus {color:#cc4714; outline:none;}
-
-h1 {font-size:26px; font-size:2.6rem; margin-bottom:9px;}
-h2 {font-size:24px; font-size:2.4rem; margin-bottom:6px;}
-h3 {font-size:21px; font-size:2.1rem; margin-bottom:3px;}
-h4 {font-size:18px; font-size:1.8rem; margin-bottom:3px;}
-h5 {font-size:16px; font-size:1.6rem; font-weight:normal;}
-h6 {font-size:13px; font-size:1.3rem; font-weight:normal;}
-
-.assistive-text {position:absolute!important; clip:rect(1px 1px 1px 1px); /* IE6, IE7 */ clip:rect(1px, 1px, 1px, 1px);}
-.required		{color:red; font-weight:bold;}
-.container 		{padding-top:15px; padding-top:1.5em;}
-
-article {margin-bottom:36px;}
-
-.page-header	{margin-bottom:18px;}
+/* Selection colours (easy to forget) */
+::selection 	 	{background:#659BC5; color:#fff;}
+::-moz-selection 	{background:#659BC5; color:#fff;}
+img::selection 		{background:transparent;}
+img::-moz-selection	{background:transparent;}
+body 				{-webkit-tap-highlight-color:#659BC5;}
 
 
-#comment {width:100%;}
+/* Alignment & Assistive Text -------------- */
+	
+.alignleft		{display:block;}
+.alignright		{display:block;}
+.aligncenter	{clear:both; display:block; margin-left:auto; margin-right:auto;}
+.assistive-text,
+.screen-reader-text	{position:absolute!important; left:-9000px; clip:rect(1px 1px 1px 1px); /* IE6, IE7 */ clip:rect(1px, 1px, 1px, 1px);}
+
+.required	{color:#c53634;}
+.note		{}
 
 
+/* Fonts & Colors -------------------------- */
+body 	{color:#313138;}
+a		{color:#073e7a; text-decoration:none; -webkit-transition:all 0.2s ease; -moz-transition:all 0.2s ease; -o-transition:all 0.2s ease; transition:all 0.2s ease;}
+a:hover, a:focus	{color:#185da7;}
+h1, h2, h3, h4, h5, h6, .cta	{}
 
-/* Images ---------------------------------- */
-.entry-content img,
-.comment-content img,
-.widget img {
-	max-width: 97.5%; /* Fluid images for posts, comments, and widgets */
-}
-img[class*="align"],
-img[class*="wp-image-"],
-img[class*="attachment-"] {
-	height: auto; /* Make sure images with WordPress-added height and width attributes are scaled correctly */
-}
-img.size-full,
-img.size-large {
-	max-width: 97.5%;
-	width: auto; /* Prevent stretching of full-size and large-size images with height and width attributes in IE8 */
-	height: auto; /* Make sure images with WordPress-added height and width attributes are scaled correctly */
-}
-.entry-content img.wp-smiley {
-	border: none;
-	margin-bottom: 0;
-	margin-top: 0;
-	padding: 0;
-}
-img.alignleft,
-img.alignright,
-img.aligncenter {
-	margin-bottom: 1.625em;
-}
-p img,
-.wp-caption {
-	margin-top: 0.4em;
-}
-.wp-caption {
-	background: #eee;
-	margin-bottom: 1.625em;
-	max-width: 96%;
-	padding: 9px;
-}
-.wp-caption img {
-	display: block;
-	margin: 0 auto;
-	max-width: 98%;
-}
-.wp-caption .wp-caption-text,
-.gallery-caption {
-	color: #666;
-	font-family: Georgia, serif;
-	font-size: 12px;
-}
-.wp-caption .wp-caption-text {
-	margin-bottom: 0.6em;
-	padding: 10px 0 5px 40px;
-	position: relative;
-}
-.wp-caption .wp-caption-text:before {
-	color: #666;
-	content: '\2014';
-	font-size: 14px;
-	font-style: normal;
-	font-weight: bold;
-	margin-right: 5px;
-	position: absolute;
-	left: 10px;
-	top: 7px;
-}
-#content .gallery {
-	margin: 0 auto 1.625em;
-}
-#content .gallery a img {
-	border: none;
-}
-img#wpstats {
-	display: block;
-	margin: 0 auto 1.625em;
-}
-#content .gallery-columns-4 .gallery-item {
-	width: 23%;
-	padding-right: 2%;
-}
-#content .gallery-columns-4 .gallery-item img {
-	width: 100%;
-	height: auto;
-}
+em		{font-style:italic;}
+strong	{font-weight:700;}
 
-/* Image borders */
-img[class*="align"],
-img[class*="wp-image-"],
-#content .gallery .gallery-icon img {/* Add fancy borders to all WordPress-added images but not things like badges and icons and the like */
-	border: 1px solid #ddd;
-	padding: 6px;
-}
-.wp-caption img {
-	border-color: #eee;
-}
-a:focus img[class*="align"],
-a:hover img[class*="align"],
-a:active img[class*="align"],
-a:focus img[class*="wp-image-"],
-a:hover img[class*="wp-image-"],
-a:active img[class*="wp-image-"],
-#content .gallery .gallery-icon a:focus img,
-#content .gallery .gallery-icon a:hover img,
-#content .gallery .gallery-icon a:active img {/* Add some useful style to those fancy borders for linked images ... */
-	background: #eee;
-	border-color: #bbb;
-}
-.wp-caption a:focus img,
-.wp-caption a:active img,
-.wp-caption a:hover img {/* ... including captioned images! */
-	background: #fff;
-	border-color: #ddd;
-}
+h1	{font-size:24px; line-height:1.222222;}
+h2	{font-size:18px; line-height:1.222222;}
+h3	{font-size:16px; line-height:1.5;}
+h4	{font-size:15px; line-height:1.5;}
+h5	{font-size:14px; line-height:1.5;}
+h6	{font-size:13px; line-height:1.5;}
 
-/* Make sure embeds and iframes fit their containers */
-embed,
-iframe,
-object {
-	max-width: 100%;
-}
+.entry-content h1, .entry-content h2, .entry-content h3, .entry-content h4,
+.entry-content h5, .entry-content h6, .entry-content p, .entry-content ul,
+.entry-content ol, .entry-content dl	{margin-bottom:18px;}
+
+.entry-content h1+ol, .entry-content h1+ul, .entry-content h1+p,
+.entry-content h2+ol, .entry-content h2+ul, .entry-content h2+p,
+.entry-content h3+ol, .entry-content h3+ul, .entry-content h3+p,
+.entry-content h4+ol, .entry-content h4+ul, .entry-content h4+p {margin-top:-15px!important;}
+
+.entry-content table td,
+.entry-content table th {padding:12px; vertical-align:top;}
+
+.page-title	{}
+
+
+/* Page structure -------------------------- */
 
 
 
-/* IE8 and below styles ---------------------------------- */
-.lt-ie8 .nav-bar li.has-flyout a {padding-right:20px;}
-.lt-ie8 .nav-bar li.has-flyout a:after {border-top:none;}
+/* Header & Footer -------------------------- */
+
+
+
+/* Homepage ---------------------------- */
+
+
+
+/* Widgets ----------------------------- */
+
+
+
+/* Comments ----------------------- */
+
+#comments 				{overflow:hidden;}
+#respond p				{overflow:hidden;}
+article.comment			{margin-bottom:24px; padding-bottom:12px; border-bottom:1px dashed #ccc;}
+.comment .children		{margin-left:30px;}
+#comments-title			{margin-bottom:12px;}
+.comment-meta			{margin-bottom:6px;}
+.comment-author .fn		{}
+.comment-meta a time	{}
+.comment-content p		{margin-bottom:6px;}
+.comment .reply,
+.comment .edit-link		{font-style:italic;}
+.comment-notes, .form-allowed-tags	{font-style:italic;}
+#comments label						{float:left; width:80px;}
+#comments .input-text				{float:left; width:auto;}
+.comment-form-comment				{margin-top:18px;}
+.comment-form-comment label			{display:block; width:auto;}
+.comment-form-comment textarea		{display:block; width:95%; clear:both; padding:5px;}
