--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /* 
-Theme Name: Kasia Organic Salon
-Theme URI: http://www.kasiaorganicsalon.com
-Description: Custom theme for Kasia Organic Salon.
+Theme Name: DPE Baseline
+Theme URI: http://dpedesign.com
+Description: A Baseline theme starter stub.
 Author: David Paul Ellenwood
 Author URI: http://dpedesign.com
-Version: 1.0
+Version: 2.0
 */
 
 /* 
