Added Github URL as the theme URL

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* 
 Theme Name: DPE Baseline
-Theme URI: http://dpedesign.com
+Theme URI: git://github.com/dpellenwood/DPE-Baseline.git
 Description: A Baseline theme starter stub.
 Author: David Paul Ellenwood
 Author URI: http://dpedesign.com
