Major revisions.  More simple. More better.  Removed some theme specifics.

--- a/css/admin.css
+++ b/css/admin.css
@@ -1,7 +1,7 @@
 /**
- * WP-Admin Scripts
+ * WP-Admin Styles
  *
- * JavaScripts used in WP-Admin.
+ * Styles used in WP-Admin.
  *
  * @package WordPress
  * @subpackage DPE_Baseline
