Fixed some minor JavaScript file naming, changed the theme author name.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: DPE Baseline
 Theme URI: git://github.com/dpellenwood/DPE-Baseline.git
 Description: A Baseline theme starter stub.
-Author: David Paul Ellenwood
+Author: DPE Websmithing & Design, LLC
 Author URI: http://dpedesign.com
 Version: 3.0
 */
