--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,9 @@ input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit
 button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
 textarea{overflow:auto;vertical-align:top;}
 table{border-collapse:collapse;border-spacing:0;}
+.cf:before,.cf:after{content:" ";display:table;}
+.cf:after{clear:both;}
+.cf{*zoom:1;}
 .alignleft{width:auto;float:left;}
 .alignright{width:auto;float:right;}
 .aligncenter{clear:both;display:block;margin-left:auto;margin-right:auto;}
