--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /* 
-Theme Name: DPE Baseline
-Theme URI: git://github.com/dpellenwood/DPE-Baseline.git
-Description: A Baseline theme starter stub.
+Theme Name: Vineyard Church Planting
+Theme URI: http://vineyardchurchplanting.com
+Description: Custom theme specific to Vineyard Church Planting.
 Author: DPE Websmithing & Design, LLC
 Author URI: http://dpedesign.com
-Version: 3.0
+Version: 0.1
 */
 
 /**
